Added brief description on various db models

--- a/app/static/app/content/site.css
+++ b/app/static/app/content/site.css
@@ -10,6 +10,9 @@
     padding-top: 15px;
 }
 
+.glyphicon.glyphicon-remove {
+  font-size: 12px;
+}
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
