--- a/app/templates/app/functionalities.html
+++ b/app/templates/app/functionalities.html
@@ -2,14 +2,15 @@
 
 {% block content %}
 	<div class = "container">
-		<h2 class="display-2">Given below is a brief description of various functionalities of this tool</h2>
+		<h2 class="display-2">A brief description of this tool</h2>
 		<blockquote>
 
 			<h4><b><a href = "/tree" >Generate_AND-OR_Tree(Process):</a></b></h4>
-			<p>Generates a AND-OR Tree representing a set of processes</p>
-			</br>			
+			<p>Generates a Tree structure representing a set of processes that are needed to undertake a specific
+				task and it outlines the order in which to perform them.</p>
+			</br>
 
-			<h4><b><a href = "/item">Retrieve_Explanation(Item):</a></b></h4>
+			<!--<h4><b><a href = "/item">Retrieve_Explanation(Item):</a></b></h4>
 			<p>Retrieves all processes with the information for the related condition/prevent/result items</p>
 			</br>
 
@@ -26,9 +27,9 @@
 			 For example, assume that the needed items are [itemA, itemB], and they are results of the following processes:</br>
 			  itemA: pr1, pr2</br>
 			  itemB: pr40, pr50</br>
-			  Then the result of this procedure would be:</br> 
+			  Then the result of this procedure would be:</br>
 			  [pr1, pr40], [pr2, pr40], [pr1, pr50], [pr1, pr50]</p>
-			</br>			
+			</br>
 
 			<h4><b><a href = "/item">Get_Tree(ProcessORTree):</a></b></h4>
 			<p>Retrieves the tree from the GLOBAL set of pre-generated trees, which matches the process or the provided tree description and the input - processOrTree is the searched process or And/OrTree</p>
@@ -40,7 +41,7 @@
 
 			<h4><b><a href = "/item">Get_Items_From_Processes(Processes):</a></b></h4>
 			<p>Returns all items used in the described processes with populated processes information</p>
-			</br>
+		</br>-->
 
 		</blockquote>
 	</div>
