--- a/app/templates/app/initial.html
+++ b/app/templates/app/initial.html
@@ -5,16 +5,32 @@
 
             <blockquote>
                 <h3>A brief introduction</h3>
-                <p>The Governance Tool generates a set of AND-OR trees of governance steps for a set of entities (e.g. projects) selected based on certain attributes (columns, e.g. project category). </p>
+                <p>The Governance Tool generates a set of AND-OR trees of governance steps for a set of entities
+									(e.g. projects) selected based on certain attributes (columns, e.g. project category). </p>
+            </blockquote>
 
-                <p>It marks items that cannot be achieved because there exists no sequence of steps (either because they are missing or due to explicit contradictions). Producing a tree implies that it does not recognize if a step is reached via different paths. It also means that it handles multiple conditional items (creating the AND) and alternative steps yielding the same result item (creating the OR). </p>
+						<blockquote>
+                <h3>How it works</h3>
+									<p>The tool generates a set of AND-OR trees of governance steps for a set of entities
+										(e.g. projects) selected based on certain attributes (columns, e.g. project category).
+										It marks items that cannot be achieved because there exists no sequence of steps (either
+										because they are missing or due to explicit contradictions).
+									</p>
+									<p> Producing a tree implies that
+										it does not recognize if a step is reached via different paths. It also means that it handles
+										multiple conditional items (creating the AND) and alternative steps yielding the same result
+										item (creating the OR).
+									</p>
             </blockquote>
 
             <blockquote>
-                <h3>Various Functionalities</h3>
-                <p>Although the main purpose of Governance tool is to output a set of AND-OR trees, various sub-functions can be extracted to provide outputs for specific requests. They are explained briefly in this <a href = "/functionalities" title="Briefing Page">section</a>.</p>
+                <h3>About Database Models</h3>
+                <p>The tool uses various entries in database to come up with the relevant AND-OR tree for a given
+									project. And, so it's imperitive that we have a robust database model. Know more about the
+									database model <a href = "/dbcontent/brief" title="Briefing Page">here</a>.
+								</p>
             </blockquote>
-            
+
 
             <!--
             <h4>Given below is a list of functionalities of this tool</h4>
