--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -26,18 +26,18 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     {#<li><a href="{% url 'home' %}">Home</a></li>#}
-                    
-                    <li><a href="/functionalities" title="On Various Functionalities">Briefing</a></li>
+
+                    <li><a href="/dbcontent/brief" title="On Various Entities">Briefing</a></li>
 
 
                     <li class = "dropdown">
                         <a href="#" title="Various types" class="dropdown-toggle" data-toggle="dropdown">
-                            Functionalities <span class="caret"></span>
+                        <b>Functionality</b><span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li title = "Generates AND-OR Tree representing a conjunction and disjunction of set of processes">
-                                <a href = "/tree" >Generate AND-OR Tree for a process</a></li>
-                            <li title = "Retrieves all processes with the information for the related condition/prevent/result items">
+                            <li title = "Generates AND-OR Tree">
+                                <a href = "/tree" ><b>Generate Tree for a Project</b></a></li>
+                            <!--<li title = "Retrieves all processes with the information for the related condition/prevent/result items">
                                 <a href = "/item">Retrieve Explanation for a item</a></li>
                             <li title = "Retrieves a tree expressing the support for a process">
                                 <a href = "/item">Retrieve Process Support</a></li>
@@ -50,17 +50,17 @@
                             <li title = "Return all available process with populated items information">
                                 <a href = "/item">Get all process with items</a></li>
                             <li title = "Returns all items used in the described processes with populated process information">
-                                <a href = "/item">Get Items from processes</a></li>
+                                <a href = "/item">Get Items from processes</a></li>-->
                         </ul>
                     </li>
 
                     <li class="dropdown">
                         <a href="#" title="Databse Contents" class="dropdown-toggle" data-toggle="dropdown">
-                            Database Contents <span class="caret"></span>
+                            Database Entries <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li title = "">
-                                <a href = "/dbcontent/Process_Items/list">Process_Items</a></li>
+                                <a href = "/dbcontent/Process_Items/list">Process Items</a></li>
                             <li title = "">
                                 <a href = "/dbcontent/Agents/list">Agents</a></li>
                             <li title = "">
@@ -68,13 +68,13 @@
                             <!--<li title = "">
                                 <a href = "/dbcontent/Item_Roles/list">Item_Roles</a></li>-->
                             <li title = "">
-                                <a href = "/dbcontent/Project_Parameters/list">Project_Parameters</a></li>
+                                <a href = "/dbcontent/Project_Parameters/list">Project Parameters</a></li>
                             <li title = "">
-                                <a href = "/dbcontent/Parameter_Values/list">Parameter_Values</a></li>
+                                <a href = "/dbcontent/Parameter_Values/list">Parameter Values</a></li>
                             <li title = "">
-                                <a href = "/dbcontent/Project_Requirements/list">Project_Requirements</a></li>
+                                <a href = "/dbcontent/Project_Requirements/list">Project Requirements</a></li>
                             <li title = "">
-                                <a href = "/dbcontent/Project_Requirement_Conditions/list">Project_Requirement_Conditions</a></li>
+                                <a href = "/dbcontent/Project_Requirement_Conditions/list">Project Requirement Conditions</a></li>
                         </ul>
 
                     </li>
@@ -88,14 +88,14 @@
 
     <div class="container body-content">
         {% block content %}
-            
+
         {% endblock %}
         <hr/>
         <footer>
             <p>&copy; {% now "Y" %} -  Model-Based Systems & Qualitative Reasoning Group @ Technical University of Munich</p>
         </footer>
     </div>
-        
+
 
     {% block scripts %}{% endblock %}
 
