--- a/dbcontent/templates/dbcontent/ProcessList.html
+++ b/dbcontent/templates/dbcontent/ProcessList.html
@@ -7,6 +7,10 @@
 			<div class="col-xs-6">
 				<blockquote>
 					<h3>List of Processes</h3>
+					{% if user.is_authenticated %}
+					{% else %}
+					<p><small>Note: To add new entries, you need to be logged in</small></p>
+					{% endif %}
 					<ul>
 						{% for process in object_list %}
 							<li>{{ process.name }}</li>
@@ -14,9 +18,11 @@
 					</ul>
 
 				</blockquote>
+				{% if user.is_authenticated %}
 				<blockquote>
 					<h3><a href="/dbcontent/Processes/add">Click here</a> to add elements to database</h3>
 				</blockquote>
+				{% endif %}
 			</div>
 		</div>
 	</div>
