--- a/dbcontent/templates/dbcontent/ProjectRequirementConditionList.html
+++ b/dbcontent/templates/dbcontent/ProjectRequirementConditionList.html
@@ -6,16 +6,22 @@
 	<div class="row">
 	<div class="col-xs-12">
 	<blockquote>
-		<h3>List of Project_Requirement_Conditons</h3>
+		<h3>List of Project Requirement Conditons</h3>
+		{% if user.is_authenticated %}
+		{% else %}
+		<p><small>Note: To add new entries, you need to be logged in</small></p>
+		{% endif %}
 		<ul>
 			{% for item in object_list %}
 				<li>{{ item.name }}</li>
 			{% endfor %}
 		</ul>
 	</blockquote>
+	{% if user.is_authenticated %}
 	<blockquote>
 		<h3><a href="/dbcontent/Project_Requirement_Conditions/add">Click here</a> to add elements to database</h3>
 	</blockquote>
+	{% endif %}
 	</div>
 	</div>
 	</div>
