--- a/dbcontent/templates/dbcontent/AgentList.html
+++ b/dbcontent/templates/dbcontent/AgentList.html
@@ -20,7 +20,7 @@
 								{{ post.name }}
 							{% endif %}
 							{% if user.is_authenticated %}
-								<a class="btn btn-danger btn-xs" href="{% url 'agent_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+								<!--<a class="btn btn-danger btn-xs" href="{% url 'agent_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>-->
 							{% endif %}
 						</li>
 					{% endfor %}
