Minor changes to some html files

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -1,14 +1,15 @@
 {% extends "app/base.html" %}
 
 {% block content %}
-    <div class="container">
-    	<blockquote>
-    		<h3>About</h3>
-    		<p>
-				The objective of this tool is to facilitate the complex process of identifying which governance steps are needed to achieve a particular task at hand. The tool has different functionalities, that can cater to different needs.
-			</p>
-			</br>
-			<p>We hope that this tool will come in handy in your endeavour.</p>
-    	</blockquote>
-	</div>
+  <h2> About</h2>
+
+  	<blockquote>
+  		<p>The objective of this tool is to facilitate the complex process of identifying which
+        governance steps are needed to achieve a particular task at hand. The tool has different functionalities,
+        that can cater to different needs.
+		</p>
+		</br>
+		<p>We hope that this tool will come in handy in your endeavour.</p>
+  	</blockquote>
+
 {% endblock %}
