--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -27,11 +27,11 @@
                 <ul class="nav navbar-nav">
                     {#<li><a href="{% url 'home' %}">Home</a></li>#}
 
-                    <li><a href="/dbcontent/brief" title="On Various Entities">Briefing</a></li>
+                    <li><a href="/dbcontent/brief" title="On Various Models">Briefing</a></li>
 
 
                     <li class = "dropdown">
-                        <a href="#" title="Various types" class="dropdown-toggle" data-toggle="dropdown">
+                        <a href="#" title="Generate Tree" class="dropdown-toggle" data-toggle="dropdown">
                         <b>Functionality</b><span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
@@ -79,7 +79,7 @@
 
                     </li>
 
-                    <li><a href="/about" title="The Governance tool">About</a></li>
+                    <li><a href="/about" title="About">About</a></li>
                 </ul>
                 {% include 'app/loginpartial.html' %}
             </div>
