--- a/dbcontent/templates/dbcontent/AgentList.html
+++ b/dbcontent/templates/dbcontent/AgentList.html
@@ -15,7 +15,7 @@
 					{% for post in posts %}
 						<li>
 							{% if user.is_authenticated %}
-								<a href="{% url 'agent_edit' pk=post.pk %}">{{ post.name }}</a>
+								<!--<a href="{% url 'agent_edit' pk=post.pk %}">-->{{ post.name }}<!--</a>-->
 							{% else %}
 								{{ post.name }}
 							{% endif %}
