Made some changes to home page

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -5,8 +5,7 @@
 
   	<blockquote>
   		<p>The objective of this tool is to facilitate the complex process of identifying which
-        governance steps are needed to achieve a particular task at hand. The tool has different functionalities,
-        that can cater to different needs.
+        governance steps are needed to achieve a particular task at hand.
 		</p>
 		</br>
 		<p>We hope that this tool will come in handy in your endeavour.</p>
