--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -27,7 +27,7 @@
                 <ul class="nav navbar-nav">
                     {#<li><a href="{% url 'home' %}">Home</a></li>#}
 
-                    <li><a href="/dbcontent/brief" title="On Various Models">Briefing</a></li>
+                    <li><a href="/dbcontent/brief" title="On Various Models">Brief</a></li>
 
 
                     <li class = "dropdown">
