Reverted some changes on home page

--- a/app/templates/app/initial.html
+++ b/app/templates/app/initial.html
@@ -1,7 +1,7 @@
 	{% extends 'app/base.html' %}
 
         {% block content %}
-            <h2>Welcome to the Governance Model</h2>
+            <h2>Welcome to Governance Tool</h2>
 
             <blockquote>
                 <h3>A brief introduction</h3>
